Fixed extra margin visual bug

--- a/styles/main/characters.css
+++ b/styles/main/characters.css
@@ -45,7 +45,7 @@
 }
 
 .heading-container h4 {
-  padding-top: 30px;
+  margin-top: 52px;
 }
 
 .characters-grid {
